[package]
name = "propertybindings"
version = "0.0.3"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
build = "build.rs"
description = "Experimental rust-based QML-like language."
license = "MIT"
repository = "https://github.com/ogoffart/propertybindings-rs"
keywords = ["qml", "gui"]
edition = "2018"

[dependencies]
qmetaobject = "0.1.3"
cpp = "0.5"
cstr = "0.1.4"

[build-dependencies]
cpp_build = "0.5"

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
pin-project = "0.4.1"
