[package]
name = "propertybindings"
version = "0.0.3"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "Experimental rust-based QML-like language."
license = "MIT"
repository = "https://github.com/ogoffart/propertybindings-rs"
keywords = ["qml", "gui"]
edition = "2018"

[dependencies]
winit = "0.20.0-alpha3"
swsurface = "0.1.2"
piet-common = "0.0.6"

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
pin-project = "0.4.1"
